Fix overflowing meal notes bug.

--- a/app/assets/stylesheets/modules/_canteens.scss
+++ b/app/assets/stylesheets/modules/_canteens.scss
@@ -166,6 +166,7 @@
             margin: 0;
             list-style: none;
             position: relative;
+            display: table-cell;
             padding: 0 0 12px 0;
             @extend %hover-transition;
 
